# task4

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md  annotated.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  print__ip_8cpp.html  print__ip_8cpp__incl.map  print__ip_8cpp__incl.md5  print_ip  print_ip.cpp  static.yml  structprint__ip-members.html  structprint__ip.html
.github/workflows/: cmake-multi-platform.yml  documentation.yaml  static.yml
doc/: Doxyfile  doxyfile
docs/: index.html
latex/: annotated.tex  files.tex  print__ip_8cpp.tex  print__ip_8cpp__incl.md5  refman.tex  structprint__ip.tex
search/: all_2.js  classes_0.js  functions_0.js  functions_2.js  searchdata.js
